--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.appstronautstudios.imagemanager"
+        applicationId "com.appstronautstudios.imagemanagerdemo"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
